5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1662_2966.log
== TEST (2019-04-15 14:05:36) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == S):
	valor = preco - (d * preco)
	print(valor)
else:
	print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(opcao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:06:23) 
-- CODE:
o = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("o==S"):
	valor = preco - (d * preco)
	print(valor)
else:
	print(preco)
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:06:58) 
-- CODE:
o = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("o==S"):
	valor = preco - ((20/100) * preco)
	print(valor)
else:
	print(preco)
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:38) 
-- CODE:
o = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("o==S"):
	valor = (preco - ((20/100) * preco))
	print(valor)
else:
	print(preco)
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:09:18) 
-- CODE:
o = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("o==S"):
	valor = (preco - ((20/100) * preco))
	print(round(valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:09:24) 
-- CODE:
o = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("o==S"):
	valor = (preco - ((20/100) * preco))
	print(round(valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:09:56) 
-- CODE:
o = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("o==S"):
	valor = (preco - (d * preco))
	print(round(valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:15) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = (preco - (d * preco))* q
	print(round(valor,2))
else:
	print(round((preco * q),2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:12:31) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = (preco - (d * preco))* q
	print(round(valor,2))
else:
	print(round((preco * q),2))
-- EXECUTION TIME:
0.152239
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:12:45) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = (preco - (d * preco))* q
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.169537
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
S/N?:  Digite o preco:  Digite quantidade: 172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
S/N?:  Digite o preco:  Digite quantidade: 101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:08) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = ((preco - (d * preco))* q)
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.151011
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:14:05) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = ((preco - (d)* preco)* q)
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.293993
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:14:08) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = ((preco - (d)* preco)* q)
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.152247
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:14:10) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = ((preco - (d)* preco)* q)
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:14:49) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = preco - (d)* preco* q
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.181219
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
-7.5
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
-16.17
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
16.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:20) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	valor = preco - (d)* preco* q
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.138948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:36) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor=preco - (d)* preco* q
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.143326
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
-7.5
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
-16.17
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
16.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:52) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = (preco - (d)* preco* q)
	print(round(valor,2))
else:
	print(round(preco * q,2))
-- EXECUTION TIME:
0.204422
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
-7.5
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
-16.17
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
16.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:23) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	valor = ((preco - ((d) * preco))* q)
	print(round(valor,2))
else:
	print(round((preco * q),2))
-- EXECUTION TIME:
0.142989
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:18) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d*preco))
	valor = (a * q)
	print(round(valor,2))
else:
	print(round((preco * q),2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:54) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d*preco))
	valor = (a * q)
	print(round(valor,2))
else:
	j = (preco * q)
	print(round(j,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:20:17) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d*preco))
	valor = (a * q)
	print(round(valor,2))
else:
	j = (preco * q)
	print(round(j,2))
-- EXECUTION TIME:
0.183106
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:28) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d*preco))
	valor = (a * q)
	print(round(valor,2))
else:
	j = (preco * q)
	print(round(j,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:55) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d*preco))
	valor = (a * q)
	print(round(valor,2))
else:
	j = preco * q
	print(round(j,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:47) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((20/100) * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	j = preco *q
	print(round(j,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:24:29) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((20/100) * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco *q
	print(round(valor,2))
-- EXECUTION TIME:
0.243265
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:24:38) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((20/100) * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.228062
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:44) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((20/100) * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:55) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((20/100) * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:25:08) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((20/100) * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.165354
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:34) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.134814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:36) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:29:06) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.159067
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:25) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:02) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	print(round(preco,2))
-- EXECUTION TIME:
0.151161
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:04) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:42) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.17863
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:45) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:34:53) 
-- CODE:
opcao = input("S/N?: ")
preco = int(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco = int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:00) 
-- CODE:
opcao = input("S/N?: ")
preco = int(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco = int(input())
ValueError: invalid literal for int() with base 10: '37.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:17) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao=S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:33) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao=S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:37:48) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 0.2
if("opcao=S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.12593
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:37:53) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 0.2
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.22007
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:38:05) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.152778
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
S/N?:  Digite o preco:  Digite quantidade: 172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
S/N?:  Digite o preco:  Digite quantidade: 101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:38:59) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.220476
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:17) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.157809
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:20) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:40:47) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.165294
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:41:44) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.149264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:47) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:42:10) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = (a * q)
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.148488
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:42:40) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = (preco * q)
	print(round(valor,2))
-- EXECUTION TIME:
0.190347
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:42:48) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - (d * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.170573
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:43:14) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 0.2
if("opcao==S"):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.152279
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:43:28) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 0.2
if(" opcao==S "):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.313873
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:43:46) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao == S"):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.194636
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
101.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:29) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if("opcao==S"):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:20) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.17193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:22) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao==S):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(opcao==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:42) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == S):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.201191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao == S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:45) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == S):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.174308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao == S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:47:04) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == S):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.175044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2966/main.py", line 5, in <module>
    if(opcao == S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:40) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == S):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(opcao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:48:07) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == "S"):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:48:14) 
-- CODE:
opcao = input("S/N?: ")
preco = float(input(" Digite o preco: "))
q = int(input(" Digite quantidade: "))
d = 20/100
if(opcao == "S"):
	a = (preco - ((d) * preco))
	valor = a * q
	print(round(valor,2))
else:
	valor = preco * q
	print(round(valor,2))
-- EXECUTION TIME:
0.12355
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
